--- a/index.html
+++ b/index.html
@@ -1,85 +1,117 @@
-<!DOCTYPE Html>
+<!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
     <style type="text/css" media="screen">
-        #editor {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-        }
+      #editor {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+      }
     </style>
-</head>
-<body>
-
-<div class="container-fluid">
-    <div class="row">
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
         <div class="col">
-            <div id="editor"></div>
+          <div id="editor"></div>
         </div>
         <div class="col ml-4 mr-4">
-            <div class="row mt-2">
-                <label for="lang">Choose a language:</label>
-                <select id="lang" name="lang" class="custom-select">
-                    <option value="node">Node.js</option>
-                    <option value="java">Java</option>
-                </select>
-                <button id="run" type="button" class="btn btn-primary mt-2">Run</button>
+          <div class="row mt-2">
+            <label for="lang">Choose a language:</label>
+            <select id="lang" name="lang" class="custom-select">
+              <option value="node">Node.js</option>
+              <option value="java">Java</option>
+              <option value="go">Go</option>
+            </select>
+            <button id="run" type="button" class="btn btn-primary mt-2">
+              Run
+            </button>
+          </div>
+          <div class="row alert alert-primary mt-2" role="alert">
+            <div class="col-md-8 pl-0">Output</div>
+            <div class="col-md-4">
+              Powered by
+              <a href="https://cloud.hazelcast.com" target="_blank"
+                ><img class="mx-auto" src="hz-cloud-logo.svg" height="30"
+              /></a>
             </div>
-            <div class="row alert alert-primary mt-2" role="alert">
-                <div class="col-md-8 pl-0">Output</div>
-                <div class="col-md-4">Powered by <a href="https://cloud.hazelcast.com" target="_blank"><img class="mx-auto" src="hz-cloud-logo.svg" height="30"></a></div>
-            </div>
-            <div class="row"><pre><code id="output"></code></pre></div>
+          </div>
+          <div class="row">
+            <pre><code id="output"></code></pre>
+          </div>
         </div>
+      </div>
     </div>
-</div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="scripts/ace.js" type="text/javascript" charset="utf-8"></script>
-<script src="scripts/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
-<script src="scripts/mode-java.js" type="text/javascript" charset="utf-8"></script>
-<script>
-    var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/monokai");
-    editor.session.setMode("ace/mode/javascript");
-    editor.setOptions({
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script
+      src="scripts/ace.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
+    <script
+      src="scripts/mode-javascript.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
+    <script
+      src="scripts/mode-java.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
+    <script>
+      var editor = ace.edit("editor");
+      editor.setTheme("ace/theme/monokai");
+      editor.session.setMode("ace/mode/javascript");
+      editor.setOptions({
         autoScrollEditorIntoView: true,
         maxLines: 30,
-    });
-    editor.renderer.setScrollMargin(10, 10, 10, 10);
-    document.getElementById('editor').style.fontSize = '20px';
-</script>
-<script type="text/javascript">
-
-    document.getElementById('lang').onchange = function () {
+      });
+      editor.renderer.setScrollMargin(10, 10, 10, 10);
+      document.getElementById("editor").style.fontSize = "20px";
+    </script>
+    <script type="text/javascript">
+      document.getElementById("lang").onchange = function () {
         var langSelect = document.getElementById("lang");
         var lang = langSelect.options[langSelect.selectedIndex].value;
         var editor = ace.edit("editor");
-        if (lang === 'java') {
-            editor.session.setMode("ace/mode/java");
+        if (lang === "java") {
+          editor.session.setMode("ace/mode/java");
+        } else if (lang === "go") {
+          editor.session.setMode("ace/mode/go");
         } else {
-            editor.session.setMode("ace/mode/javascript");
+          editor.session.setMode("ace/mode/javascript");
         }
-    }
+      };
 
-    document.getElementById('run').onclick = run;
-    function run() {
-        document.getElementById('run').disabled = true;
+      document.getElementById("run").onclick = run;
+      function run() {
+        document.getElementById("run").disabled = true;
 
-        document.getElementById('output').innerText = '';
+        document.getElementById("output").innerText = "";
 
         var id = makeid(32);
         var langSelect = document.getElementById("lang");
@@ -87,34 +119,38 @@
         var editor = ace.edit("editor");
         var code = editor.getValue();
 
-        axios.post('http://localhost:3000/test', {
-            id, lang, code
-        })
-            .then(function (res) {
-                var evtSource = new EventSource("http://localhost:3000/test/" + id);
-                evtSource.onmessage = function (e) {
-                    var div = document.getElementById('output');
-                    div.innerText += e.data + "\n";
-                }
+        axios
+          .post("http://localhost:3000/test", {
+            id,
+            lang,
+            code,
+          })
+          .then(function (res) {
+            var evtSource = new EventSource("http://localhost:3000/test/" + id);
+            evtSource.onmessage = function (e) {
+              var div = document.getElementById("output");
+              div.innerText += e.data + "\n";
+            };
 
-                evtSource.onerror = function (e) {
-                    document.getElementById("run").disabled = false;
-                    evtSource.close();
-                }
-            })
-    }
+            evtSource.onerror = function (e) {
+              document.getElementById("run").disabled = false;
+              evtSource.close();
+            };
+          });
+      }
 
-    function makeid(length) {
-        var result = '';
-        var characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+      function makeid(length) {
+        var result = "";
+        var characters =
+          "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
         var charactersLength = characters.length;
         for (var i = 0; i < length; i++) {
-            result += characters.charAt(Math.floor(Math.random() * charactersLength));
+          result += characters.charAt(
+            Math.floor(Math.random() * charactersLength)
+          );
         }
         return result;
-    }
-
-</script>
-
-</body>
+      }
+    </script>
+  </body>
 </html>
